tests/baselines/reference/parserStrictMode15.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15.ts(2,8): error TS1102: 'delete' cannot be called on an identifier in strict mode.
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15.ts(2,8): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15.ts (2 errors) ====
    "use strict";
    delete a;
           ~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
           ~
!!! error TS2304: Cannot find name 'a'.